# DelaunayTriangulation

./: .gitignore  Cargo.toml  README.md
assets/: shader.frag  shader.geom  shader.vert
src/: game.rs  main.rs  simulation.rs  triangulation.rs
