[package]
name = "delaunay-trig"
version = "0.1.0"
edition = "2021"
authors = ["Calco Dev"]
description = "A Delaunay triangulation visualization using Piston"
repository = "https://github.com/CalcoDev/DelaunayTriangulation"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
macroquad = "0.3.25"
rand = "0.8.4"